# reasonsforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
reasonsforge/: __init__.py  api.py  ask.py  build_wiki.py  check_stale.py  cli.py  cluster.py  compact.py  contradictions.py  derive.py  export_card.py  export_markdown.py  hf.py  import_agent.py  import_beliefs.py  llm.py  mcp_client.py  mcp_server.py  merkle.py  metadata.py  mind_service.py  network.py  pg.py  propose_update.py  pubsub.py  repair.py  repair_premises.py  report_belief.py  report_gated.py  review.py  review_justifications.py  review_premises.py  storage.py  verify.py
reasonsforge/forge/: __init__.py  caffeinate.py  cli.py  (+9 more)
tests/: conftest.py  test_access_tags.py  test_add_justification.py  test_any_mode.py  test_api.py  test_ask.py  test_ask_mcp.py  test_backtracking.py  test_build_wiki.py  test_check_stale.py  test_check_stale_issue25.py  test_classify_defeaters.py  test_cli.py  test_cluster.py  test_compact.py  test_contradictions.py  test_dangling_dependents.py  test_deduplication.py  test_defeat_justification.py  test_defeat_with_scope.py  test_dependents_integrity.py  test_derive.py  test_derive_budget.py  test_dialectical.py  test_example.py  test_export_card.py  test_export_markdown.py  test_forge_chunk_docs.py  test_forge_index_sources.py  test_forge_llm.py  test_forge_pipeline.py  test_forge_propose.py  test_forge_summarize.py  test_hf_default_org.py  test_import_agent.py  test_import_beliefs.py  test_import_hf.py  test_import_json.py  test_llm.py  test_mcp_server.py  (+30 more)
